producing xliff from data for wanted target
